--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
             window.history.replaceState(null, null, l.pathname.slice(0, -1) + (q.p || '') + (q.q ? '?' + q.q : '') + l.hash)
           }
         }
-      })(window.location)</script><script type="text/javascript" src="main.d191b0.js?33aa4decc104f8b5fb88"></script></body></html>
+      })(window.location)</script><script type="text/javascript" src="main.b7ca36.js?9187a48739d08791c14b"></script></body></html>
